Start fixing responsive issues

--- a/_includes/common/footer.html
+++ b/_includes/common/footer.html
@@ -2,8 +2,6 @@
     <!-- Site Footer -->
     <footer class="site-footer">
         <div class="container">
-
-            <!-- App Links -->
             <nav class="nav nav-inline">
                 <a class="nav-link" href="/cinemadrape/windows/">CinemaDrape</a>
                 <a class="nav-link" href="/colorveil/windows/">ColorVeil</a>
@@ -15,26 +13,22 @@
                 <a class="nav-link" href="/htmtied/windows/">HTMtied</a>
             </nav>
 
-            <!-- Main Links -->
             <nav class="nav nav-inline">
-            <a class="nav-link" href="/apps/">Apps</a>
-            <a class="nav-link" href="/reviews/">Reviews</a>
-            <a class="nav-link" href="/support/">Support</a>
-            <a class="nav-link" href="/about/">About</a>
+                <a class="nav-link" href="/apps/">Apps</a>
+                <a class="nav-link" href="/reviews/">Reviews</a>
+                <a class="nav-link" href="/support/">Support</a>
+                <a class="nav-link" href="/about/">About</a>
             </nav>
 
-            <!-- Copyright -->
             <p class="copyright">Copyright © 1999-2016 Aurelitec. All rights reserved. <a href="/about/privacy/">Privacy Policy</a></p>
 
-            <!-- Social Links -->
             <nav class="nav nav-inline">
                 <a class="nav-link social social-twitter" href="https://twitter.com/aurelitec" target="_blank"><img class="social-icon" src="/img/third/social/twitter.svg" alt="Twitter" title="Twitter" /></a>
                 <a class="nav-link social social-github" href="https://github.com/aurelitec/" target="_blank"><img class="social-icon" src="/img/third/social/github.svg" alt="GitHub" title="GitHub" /></a>
                 <a class="nav-link social social-pocket" href="https://getpocket.com/@aurelitec" target="_blank"><img class="social-icon" src="/img/third/social/pocket.svg" alt="Pocket" title="Pocket" /></a>
             </nav>
         </div>
-    </footer>
-
+    </footer> <!-- .site-footer -->
 
     <!-- jQuery first, then Bootstrap JS. -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
