--- a/_includes/jumbotrons/colortypist-windows.html
+++ b/_includes/jumbotrons/colortypist-windows.html
@@ -2,10 +2,12 @@
 <div class="jumbotron jumbotron-fluid">
     <div class="container">
         <a href="/colortypist/windows/">
-            <img class="img-fluid pull-xs-right jumbotron-shot" src="/img/apps/colortypist/colortypist-jumbotron-shot.png" alt="Colortypist Screenshot" />
+            <img class="img-fluid jumbotron-shot" src="/img/apps/colortypist/colortypist-jumbotron-shot.png" alt="Colortypist Screenshot" />
         </a>
-        <h1 class="jumbotron-heading"><a href="/colortypist/windows/" class="appname">Colortypist.</a> Type in a color name or code, and see it fill your screen in real-time, while you type.</h1>
-        <p class="jumbotron-quote"><q>A handy free color picker and viewer with plenty of useful features.</q> (PC &amp; Tech Authority)</p>
-        <a class="btn btn-primary" href="/colortypist/windows/download/" role="button">Get it Free for Windows</a>
+        <div class="jumbotron-content">
+            <h1 class="jumbotron-heading"><a href="/colortypist/windows/" class="appname">Colortypist.</a> Type in a color name or code, and see it fill your screen in real-time, while you type.</h1>
+            <p class="jumbotron-quote"><q>A handy free color picker and viewer with plenty of useful features.</q> (PC &amp; Tech Authority)</p>
+            <a class="btn btn-primary" href="/colortypist/windows/download/" role="button">Get it Free for Windows</a>
+        </div>
     </div>
 </div>
