--- a/_includes/jumbotrons/east-tec.html
+++ b/_includes/jumbotrons/east-tec.html
@@ -1,14 +1,16 @@
 <div class="jumbotron jumbotron-fluid">
     <div class="container">
         <a href="http://www.east-tec.com" target="_blank">
-            <img class="img-fluid pull-xs-right jumbotron-shot"
+            <img class="img-fluid jumbotron-shot"
                 src="/img/third/east-tec/east-tec-jumbotron-shot.png"
                 srcset="/img/third/east-tec/east-tec-jumbotron-shot.png 1x,
                         /img/third/east-tec/east-tec-jumbotron-shot-2x.png 2x"
                 alt="East-Tec Screenshot" />
         </a>
-        <h1 class="jumbotron-heading"><a href="http://www.east-tec.com" target="_blank" class="appname">east-tec Eraser</a> is our main sponsor and supporter, and the reason all Aurelitec apps are free.</h1>
-        <p class="jumbotron-quote"><q>east-tec Eraser is the perfect program to cover your tracks.</q> (PC Pro)</p>
-        <a class="btn btn-primary" href="http://www.east-tec.com" target="_blank" role="button">Get it Free for Windows</a>
+        <div class="jumbotron-content">
+            <h1 class="jumbotron-heading"><a href="http://www.east-tec.com" target="_blank" class="appname">east-tec Eraser</a> is our main sponsor and supporter, and the reason all Aurelitec apps are free.</h1>
+            <p class="jumbotron-quote"><q>east-tec Eraser is the perfect program to cover your tracks.</q> (PC Pro)</p>
+            <a class="btn btn-primary" href="http://www.east-tec.com" target="_blank" role="button">Get it Free for Windows</a>
+        </div>
     </div>
 </div>
