--- a/_includes/jumbotrons/injuredpixels-android.html
+++ b/_includes/jumbotrons/injuredpixels-android.html
@@ -2,16 +2,18 @@
 <div class="jumbotron jumbotron-fluid">
     <div class="container">
         <a href="/injuredpixels/android/">
-            <img class="img-fluid pull-xs-right jumbotron-shot"
+            <img class="img-fluid jumbotron-shot"
                 src="/img/apps/injuredpixels/android/jumbotron/injuredpixels-android-jumbotron-shot.png"
                 srcset="/img/apps/injuredpixels/android/jumbotron/injuredpixels-android-jumbotron-shot.png 1x,
                 /img/apps/injuredpixels/android/jumbotron/injuredpixels-android-jumbotron-shot-2x.png 2x,
                 /img/apps/injuredpixels/android/jumbotron/injuredpixels-android-jumbotron-shot-3x.png 3x"
                 alt="InjuredPixels for Android Screenshot" />
         </a>
-        <h1 class="jumbotron-heading"><a href="/injuredpixels/android/" class="appname">InjuredPixels.</a> Check the screen of your Android device for dead pixels, scratches or defects.</h1>
-        <p class="jumbotron-quote"><q>InjuredPixels is just about as simple a program as you'll see.</q> (BetaNews)</p>
-        <p><a class="btn btn-primary" href="/injuredpixels/android/download/" role="button">Get it Free for Android</a></p>
-        <p>Also available for <a class="link" href="/injuredpixels/windows/">Windows</a></p>
+        <div class="jumbotron-content">
+            <h1 class="jumbotron-heading"><a href="/injuredpixels/android/" class="appname">InjuredPixels.</a> Check the screen of your Android device for dead pixels, scratches or defects.</h1>
+            <p class="jumbotron-quote"><q>InjuredPixels is just about as simple a program as you'll see.</q> (BetaNews)</p>
+            <p><a class="btn btn-primary" href="/injuredpixels/android/download/" role="button">Get it Free for Android</a></p>
+            <p>Also available for <a class="link" href="/injuredpixels/windows/">Windows</a></p>
+        </div>
     </div>
 </div>
