--- a/_includes/css/global.css
+++ b/_includes/css/global.css
@@ -24,59 +24,87 @@ a:focus, a:hover {
 
 
 /* ==========================================================================
-   Main Global Blocks
+   Site Header with Navbar
    ========================================================================== */
-
-/*
- * Site Header with Navbar
- */
 
  .navbar {
      background: #fff;
      border-bottom: 2px solid #fff;
      padding: 0;
- }
+}
 
- .navbar-brand {
-     padding: 0;
- }
+.navbar-brand {
+    padding: 0;
+}
 
- .header-logo {
-     max-height: 140px;
- }
+.header-logo {
+    max-height: 140px;
+}
 
- .navbar .nav {
-     float: right;
- }
+.navbar-toggler {
+    font-size: 2rem;
+    margin-top: 45px;
+}
 
- .navbar .nav-link {
-     color: #000;
-     display: table-cell;
-     font-size: 1.15rem;
-     font-weight: bold;
-     height: 140px;
-     text-align: center;
-     vertical-align: middle;
-     width: 140px;
- }
+@media (min-width: 768px) {
+    .navbar .nav {
+        float: right;
+    }
+}
 
- .navbar .nav-link:focus, .navbar .nav-link:hover {
-     background: #1badea;
-     color: #fff;
- }
+.navbar .nav-link {
+    color: #000;
+    display: table-cell;
+    font-size: 1.15rem;
+    font-weight: bold;
+    height: 140px;
+    text-align: center;
+    vertical-align: middle;
+    width: 130px;
+}
+
+@media (min-width: 992px) {
+    .navbar .nav-link {
+        width: 140px;
+    }
+}
+
+.navbar .nav-link:focus, .navbar .nav-link:hover {
+    background: #1badea;
+    color: #fff;
+}
 
 
-/*
- *  Jumbotron
- */
+ /* ==========================================================================
+    Jumbotron
+    ========================================================================== */
 
 .jumbotron {
     background: #1badea url("../img/theme/backgrounds/jumbotron-background.png") no-repeat top center;
     color: #fff;
     margin-bottom: 0;
+    text-align: center;
+}
+
+@media (min-width: 992px) {
+    .jumbotron {
+        text-align: left;
+    }
 }
 
 /* Jumbotron content */
+
+.jumbotron-content {
+    margin: 0 auto;
+    max-width: 30rem;
+}
+
+@media (min-width: 992px) {
+    .jumbotron-content {
+        margin: 0;
+        max-width: none;
+    }
+}
 
 .jumbotron-heading {
     font-size: 1.75rem;
@@ -116,23 +144,30 @@ a:focus, a:hover {
 .jumbotron-shot {
     border: 4px solid #fff;
     height: 278px;
-    margin-left: 1rem;
+    margin: 0 auto 1.5rem auto;
     width: 300px;
 }
 
+@media (min-width: 992px) {
+    .jumbotron-shot {
+        float: right;
+        margin: 0 0 0 1rem;
+    }
+}
 
-/*
- * Site Main
- */
+
+/* ==========================================================================
+   Site Main
+   ========================================================================== */
 
  .site-main {
      padding-top: 4rem;
  }
 
 
-/*
- * Site Footer
- */
+ /* ==========================================================================
+    Site Footer
+    ========================================================================== */
 
 .site-footer {
    background: #f0f0f0;
@@ -148,13 +183,18 @@ a:focus, a:hover {
 
 .site-footer .nav-link {
    color: #373737;
+   padding: 0.25rem;
+}
+
+.site-footer .nav-link:focus, .site-footer .nav-link:hover {
+    color: #1badea;
 }
 
 /* Footer copyright */
 
 .copyright {
    color: #555;
-   margin-bottom: 2rem;
+   margin: 0.25rem 0 2rem 0;
 }
 
 /* Social icons */
