--- a/_includes/jumbotrons/cinemadrape-windows.html
+++ b/_includes/jumbotrons/cinemadrape-windows.html
@@ -2,10 +2,12 @@
 <div class="jumbotron jumbotron-fluid">
     <div class="container">
         <a href="/cinemadrape/windows/">
-            <img class="img-fluid pull-xs-right jumbotron-shot" src="/img/apps/cinemadrape/cinemadrape-jumbotron-shot.jpg" alt="CinemaDrape Screenshot" />
+            <img class="img-fluid jumbotron-shot" src="/img/apps/cinemadrape/cinemadrape-jumbotron-shot.jpg" alt="CinemaDrape Screenshot" />
         </a>
-        <h1 class="jumbotron-heading"><a href="/cinemadrape/windows/" class="appname">CinemaDrape.</a> Minimize distractions and focus on your task by blacking out other screen areas.</h1>
-        <p class="jumbotron-quote"><q>CinemaDrape provides a more flexible way to focus solely on your areas of interest.</q> (BetaNews)</p>
-        <a class="btn btn-primary" href="/cinemadrape/windows/download/" role="button">Get it Free for Windows</a>
+        <div class="jumbotron-content">
+            <h1 class="jumbotron-heading"><a href="/cinemadrape/windows/" class="appname">CinemaDrape.</a> Minimize distractions and focus on your task by blacking out other screen areas.</h1>
+            <p class="jumbotron-quote"><q>CinemaDrape provides a more flexible way to focus solely on your areas of interest.</q> (BetaNews)</p>
+            <a class="btn btn-primary" href="/cinemadrape/windows/download/" role="button">Get it Free for Windows</a>
+        </div>
     </div>
 </div>
