--- a/_includes/jumbotrons/colorveil-windows.html
+++ b/_includes/jumbotrons/colorveil-windows.html
@@ -2,10 +2,12 @@
 <div class="jumbotron jumbotron-fluid">
     <div class="container">
         <a href="/colorveil/windows/">
-            <img class="img-fluid pull-xs-right jumbotron-shot" src="/img/apps/colorveil/colorveil-jumbotron-shot.png" alt="ColorVeil Screenshot" />
+            <img class="img-fluid jumbotron-shot" src="/img/apps/colorveil/colorveil-jumbotron-shot.png" alt="ColorVeil Screenshot" />
         </a>
-        <h1 class="jumbotron-heading"><a href="/colorveil/windows/" class="appname">ColorVeil.</a> A customizable color filter over your screen. Reduce eye strain, help with Dyslexia / Irlen.</h1>
-        <p class="jumbotron-quote"><q>A coloured tint across the screen helped students with their reading</q> (Middlewich High School)</p>
-        <a class="btn btn-primary" href="/colorveil/windows/download/" role="button">Get it Free for Windows</a>
+        <div class="jumbotron-content">
+            <h1 class="jumbotron-heading"><a href="/colorveil/windows/" class="appname">ColorVeil.</a> A customizable color filter over your screen. Reduce eye strain, help with Dyslexia / Irlen.</h1>
+            <p class="jumbotron-quote"><q>A coloured tint across the screen helped students with their reading</q> (Middlewich High School)</p>
+            <a class="btn btn-primary" href="/colorveil/windows/download/" role="button">Get it Free for Windows</a>
+        </div>
     </div>
 </div>
