--- a/_includes/jumbotrons/htmtied-windows.html
+++ b/_includes/jumbotrons/htmtied-windows.html
@@ -2,10 +2,12 @@
 <div class="jumbotron jumbotron-fluid">
     <div class="container">
         <a href="/htmtied/windows/">
-            <img class="img-fluid pull-xs-right jumbotron-shot" src="/img/apps/htmtied/htmtied-jumbotron-shot.jpg" alt="HTMtied Screenshot" />
+            <img class="img-fluid jumbotron-shot" src="/img/apps/htmtied/htmtied-jumbotron-shot.jpg" alt="HTMtied Screenshot" />
         </a>
-        <h1 class="jumbotron-heading"><a href="/htmtied/windows/" class="appname">HTMtied.</a> Save your Internet bookmarks as tiny portable HTML bookmark files, and use them anywhere.</h1>
-        <p class="jumbotron-quote"><q>A great implementation of such a simple yet brilliant idea.</q> (FreewareGenius)</p>
-        <a class="btn btn-primary" href="/htmtied/windows/download/" role="button">Get it Free for Windows</a>
+        <div class="jumbotron-content">
+            <h1 class="jumbotron-heading"><a href="/htmtied/windows/" class="appname">HTMtied.</a> Save your Internet bookmarks as tiny portable HTML bookmark files, and use them anywhere.</h1>
+            <p class="jumbotron-quote"><q>A great implementation of such a simple yet brilliant idea.</q> (FreewareGenius)</p>
+            <a class="btn btn-primary" href="/htmtied/windows/download/" role="button">Get it Free for Windows</a>
+        </div>
     </div>
 </div>
