--- a/_includes/jumbotrons/injuredpixels-windows.html
+++ b/_includes/jumbotrons/injuredpixels-windows.html
@@ -2,11 +2,13 @@
 <div class="jumbotron jumbotron-fluid">
     <div class="container">
         <a href="/injuredpixels/windows/">
-            <img class="img-fluid pull-xs-right jumbotron-shot" src="/img/apps/injuredpixels/windows/injuredpixels-jumbotron-shot.png" alt="InjuredPixels Screenshot" />
+            <img class="img-fluid jumbotron-shot" src="/img/apps/injuredpixels/windows/injuredpixels-jumbotron-shot.png" alt="InjuredPixels Screenshot" />
         </a>
-        <h1 class="jumbotron-heading"><a href="/injuredpixels/windows/" class="appname">InjuredPixels.</a> Check your PC, laptop or tablet screen for dead pixels, scratches or defects.</h1>
-        <p class="jumbotron-quote"><q>InjuredPixels is just about as simple a program as you'll see.</q> (BetaNews)</p>
-        <p><a class="btn btn-primary" href="/injuredpixels/windows/download/" role="button">Get it Free for Windows</a></p>
-        <p>Also available for <a class="link" href="/injuredpixels/android/">Android</a></p>
+        <div class="jumbotron-content">
+            <h1 class="jumbotron-heading"><a href="/injuredpixels/windows/" class="appname">InjuredPixels.</a> Check your PC, laptop or tablet screen for dead pixels, scratches or defects.</h1>
+            <p class="jumbotron-quote"><q>InjuredPixels is just about as simple a program as you'll see.</q> (BetaNews)</p>
+            <p><a class="btn btn-primary" href="/injuredpixels/windows/download/" role="button">Get it Free for Windows</a></p>
+            <p>Also available for <a class="link" href="/injuredpixels/android/">Android</a></p>
+        </div>
     </div>
 </div>
