--- a/_includes/jumbotrons/pixelhealer-windows.html
+++ b/_includes/jumbotrons/pixelhealer-windows.html
@@ -2,10 +2,12 @@
 <div class="jumbotron jumbotron-fluid">
     <div class="container">
         <a href="/pixelhealer/windows/">
-            <img class="img-fluid pull-xs-right jumbotron-shot" src="/img/apps/pixelhealer/pixelhealer-jumbotron-shot.jpg" alt="PixelHealer Screenshot" />
+            <img class="img-fluid jumbotron-shot" src="/img/apps/pixelhealer/pixelhealer-jumbotron-shot.jpg" alt="PixelHealer Screenshot" />
         </a>
-        <h1 class="jumbotron-heading"><a href="/pixelhealer/windows/" class="appname">PixelHealer.</a> Try to fix dead, stuck or hot pixels by yourself, before running back to the store!</h1>
-        <p class="jumbotron-quote"><q>An effective and money-saving solution for dead or stuck pixels on your screen.</q> (Download3K)</p>
-        <a class="btn btn-primary" href="/pixelhealer/windows/download/" role="button">Get it Free for Windows</a>
+        <div class="jumbotron-content">
+            <h1 class="jumbotron-heading"><a href="/pixelhealer/windows/" class="appname">PixelHealer.</a> Try to fix dead, stuck or hot pixels by yourself, before running back to the store!</h1>
+            <p class="jumbotron-quote"><q>An effective and money-saving solution for dead or stuck pixels on your screen.</q> (Download3K)</p>
+            <a class="btn btn-primary" href="/pixelhealer/windows/download/" role="button">Get it Free for Windows</a>
+        </div>
     </div>
 </div>
