--- a/_includes/jumbotrons/thumbico-windows.html
+++ b/_includes/jumbotrons/thumbico-windows.html
@@ -2,10 +2,12 @@
 <div class="jumbotron jumbotron-fluid">
     <div class="container">
         <a href="/thumbico/windows/">
-            <img class="img-fluid pull-xs-right jumbotron-shot" src="/img/apps/thumbico/thumbico-jumbotron-shot.png" alt="Thumbico Screenshot" />
+            <img class="img-fluid jumbotron-shot" src="/img/apps/thumbico/thumbico-jumbotron-shot.png" alt="Thumbico Screenshot" />
         </a>
-        <h1 class="jumbotron-heading"><a href="/thumbico/windows/" class="appname">Thumbico.</a> View the large thumbnail or icon of any file, image, document, or program on your PC.</h1>
-        <p class="jumbotron-quote"><q>Comprehensive and ingenious despite a more spartan interface.</q> (Allmyapps)</p>
-        <a class="btn btn-primary" href="/thumbico/windows/download/" role="button">Get it Free for Windows</a>
+        <div class="jumbotron-content">
+            <h1 class="jumbotron-heading"><a href="/thumbico/windows/" class="appname">Thumbico.</a> View the large thumbnail or icon of any file, image, document, or program on your PC.</h1>
+            <p class="jumbotron-quote"><q>Comprehensive and ingenious despite a more spartan interface.</q> (Allmyapps)</p>
+            <a class="btn btn-primary" href="/thumbico/windows/download/" role="button">Get it Free for Windows</a>
+        </div>
     </div>
 </div>
