--- a/_includes/jumbotrons/whatsmyco-web.html
+++ b/_includes/jumbotrons/whatsmyco-web.html
@@ -2,10 +2,12 @@
 <div class="jumbotron jumbotron-fluid">
     <div class="container">
         <a href="/whatsmyco/web/">
-            <img class="img-fluid pull-xs-right jumbotron-shot" src="/img/apps/whatsmyco/web/whatsmyco-jumbotron-shot.png" alt="WhatsMyCo Screenshot" />
+            <img class="img-fluid jumbotron-shot" src="/img/apps/whatsmyco/web/whatsmyco-jumbotron-shot.png" alt="WhatsMyCo Screenshot" />
         </a>
-        <h1 class="jumbotron-heading"><a href="/whatsmyco/web/" class="appname">WhatsMyCo.</a>  Type your name or text and get your matching color! A fun way to discover colors!</h1>
-        <p class="jumbotron-quote"><q>WhatsMyCo is a pretty interesting concept.</q> (I Love Free Software)</p>
-        <a class="btn btn-primary" href="/whatsmyco/web/download/" role="button">Run In Your Browser</a>
+        <div class="jumbotron-content">
+            <h1 class="jumbotron-heading"><a href="/whatsmyco/web/" class="appname">WhatsMyCo.</a>  Type your name or text and get your matching color! A fun way to discover colors!</h1>
+            <p class="jumbotron-quote"><q>WhatsMyCo is a pretty interesting concept.</q> (I Love Free Software)</p>
+            <a class="btn btn-primary" href="/whatsmyco/web/download/" role="button">Run In Your Browser</a>
+        </div>
     </div>
 </div>
