Continue fixing responsive issues

--- a/_includes/common/header.html
+++ b/_includes/common/header.html
@@ -11,7 +11,8 @@
     <link href="https://fonts.googleapis.com/css?family=Dosis:200" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/main.css">
-    
+    <meta name="theme-color" content="#1BADEA">
+
     {% seo %}
 </head>
 <body>
