--- a/_includes/css/common.css
+++ b/_includes/css/common.css
@@ -20,11 +20,19 @@
     color: #fff;
     font-size: 1rem;
     font-weight: bold;
-    height: 140px;
-    line-height: 140px;
+    height: 120px;
+    line-height: 120px;
     margin: 0 0 3rem 0;
     text-align: center;
-    width: 140px;
+    width: 120px;
+}
+
+@media (min-width: 544px) {
+    .section-heading {
+        height: 140px;
+        line-height: 140px;
+        width: 140px;
+    }
 }
 
 .item-heading {
