--- a/_includes/jumbotrons/cinemadrape-windows.html
+++ b/_includes/jumbotrons/cinemadrape-windows.html
@@ -7,7 +7,8 @@
         <div class="jumbotron-content">
             <h1 class="jumbotron-heading"><a href="/cinemadrape/windows/" class="appname">CinemaDrape.</a> Minimize distractions and focus on your task by blacking out other screen areas.</h1>
             <p class="jumbotron-quote"><q>CinemaDrape provides a more flexible way to focus solely on your areas of interest.</q> (BetaNews)</p>
-            <a class="btn btn-primary" href="/cinemadrape/windows/download/" role="button">Get it Free for Windows</a>
+            <p><a class="btn btn-primary" href="/cinemadrape/windows/download/" role="button">Get it Free for Windows</a></p>
+            <p></p>
         </div>
     </div>
 </div>
