--- a/_includes/jumbotrons/colortypist-windows.html
+++ b/_includes/jumbotrons/colortypist-windows.html
@@ -7,7 +7,8 @@
         <div class="jumbotron-content">
             <h1 class="jumbotron-heading"><a href="/colortypist/windows/" class="appname">Colortypist.</a> Type in a color name or code, and see it fill your screen in real-time, while you type.</h1>
             <p class="jumbotron-quote"><q>A handy free color picker and viewer with plenty of useful features.</q> (PC &amp; Tech Authority)</p>
-            <a class="btn btn-primary" href="/colortypist/windows/download/" role="button">Get it Free for Windows</a>
+            <p><a class="btn btn-primary" href="/colortypist/windows/download/" role="button">Get it Free for Windows</a></p>
+            <p></p>
         </div>
     </div>
 </div>
