--- a/_includes/jumbotrons/thumbico-windows.html
+++ b/_includes/jumbotrons/thumbico-windows.html
@@ -7,7 +7,8 @@
         <div class="jumbotron-content">
             <h1 class="jumbotron-heading"><a href="/thumbico/windows/" class="appname">Thumbico.</a> View the large thumbnail or icon of any file, image, document, or program on your PC.</h1>
             <p class="jumbotron-quote"><q>Comprehensive and ingenious despite a more spartan interface.</q> (Allmyapps)</p>
-            <a class="btn btn-primary" href="/thumbico/windows/download/" role="button">Get it Free for Windows</a>
+            <p><a class="btn btn-primary" href="/thumbico/windows/download/" role="button">Get it Free for Windows</a></p>
+            <p></p>
         </div>
     </div>
 </div>
