--- a/_includes/jumbotrons/colorveil-windows.html
+++ b/_includes/jumbotrons/colorveil-windows.html
@@ -7,7 +7,8 @@
         <div class="jumbotron-content">
             <h1 class="jumbotron-heading"><a href="/colorveil/windows/" class="appname">ColorVeil.</a> A customizable color filter over your screen. Reduce eye strain, help with Dyslexia / Irlen.</h1>
             <p class="jumbotron-quote"><q>A coloured tint across the screen helped students with their reading</q> (Middlewich High School)</p>
-            <a class="btn btn-primary" href="/colorveil/windows/download/" role="button">Get it Free for Windows</a>
+            <p><a class="btn btn-primary" href="/colorveil/windows/download/" role="button">Get it Free for Windows</a></p>
+            <p></p>
         </div>
     </div>
 </div>
