--- a/_includes/jumbotrons/htmtied-windows.html
+++ b/_includes/jumbotrons/htmtied-windows.html
@@ -7,7 +7,8 @@
         <div class="jumbotron-content">
             <h1 class="jumbotron-heading"><a href="/htmtied/windows/" class="appname">HTMtied.</a> Save your Internet bookmarks as tiny portable HTML bookmark files, and use them anywhere.</h1>
             <p class="jumbotron-quote"><q>A great implementation of such a simple yet brilliant idea.</q> (FreewareGenius)</p>
-            <a class="btn btn-primary" href="/htmtied/windows/download/" role="button">Get it Free for Windows</a>
+            <p><a class="btn btn-primary" href="/htmtied/windows/download/" role="button">Get it Free for Windows</a></p>
+            <p></p>
         </div>
     </div>
 </div>
