--- a/_includes/jumbotrons/pixelhealer-windows.html
+++ b/_includes/jumbotrons/pixelhealer-windows.html
@@ -7,7 +7,8 @@
         <div class="jumbotron-content">
             <h1 class="jumbotron-heading"><a href="/pixelhealer/windows/" class="appname">PixelHealer.</a> Try to fix dead, stuck or hot pixels by yourself, before running back to the store!</h1>
             <p class="jumbotron-quote"><q>An effective and money-saving solution for dead or stuck pixels on your screen.</q> (Download3K)</p>
-            <a class="btn btn-primary" href="/pixelhealer/windows/download/" role="button">Get it Free for Windows</a>
+            <p><a class="btn btn-primary" href="/pixelhealer/windows/download/" role="button">Get it Free for Windows</a></p>
+            <p></p>
         </div>
     </div>
 </div>
