--- a/_includes/jumbotrons/injuredpixels-android.html
+++ b/_includes/jumbotrons/injuredpixels-android.html
@@ -11,7 +11,7 @@
         </a>
         <div class="jumbotron-content">
             <h1 class="jumbotron-heading"><a href="/injuredpixels/android/" class="appname">InjuredPixels.</a> Check the screen of your Android device for dead pixels, scratches or defects.</h1>
-            <p class="jumbotron-quote"><q>InjuredPixels is just about as simple a program as you'll see.</q> (BetaNews)</p>
+            <p class="jumbotron-quote"><q>The capable InjuredPixels is just about as simple a program as you'll see.</q> (BetaNews)</p>
             <p><a class="btn btn-primary" href="/injuredpixels/android/download/" role="button">Get it Free for Android</a></p>
             <p>Also available for <a class="link" href="/injuredpixels/windows/">Windows</a></p>
         </div>
