--- a/_includes/css/global.css
+++ b/_includes/css/global.css
@@ -65,12 +65,6 @@ a:focus, a:hover {
     outline: 2px solid #1BADEA;
 }
 
-@media (min-width: 544px) {
-    .navbar-toggler {
-        margin-top: 45px;
-    }
-}
-
 .navbar-panel {
     margin-top: 2px;
 }
@@ -79,6 +73,10 @@ a:focus, a:hover {
     .navbar-panel {
         margin-top: 0;
     }
+}
+
+.navbar .nav {
+    text-align: center;
 }
 
 @media (min-width: 768px) {
@@ -97,18 +95,6 @@ a:focus, a:hover {
     text-align: center;
     width: 120px;
 }
-
-/*
-@media (min-width: 544px) {
-    .navbar .nav-link {
-        display: table-cell;
-        height: 140px;
-        text-align: center;
-        vertical-align: middle;
-        width: 130px;
-    }
-}
-*/
 
 @media (min-width: 544px) {
     .navbar .nav-link {
@@ -164,7 +150,7 @@ a:focus, a:hover {
 }
 
 .jumbotron-heading {
-    font-size: 1.5rem;
+    font-size: 1.25rem;
 }
 
 @media (min-width: 544px) {
@@ -181,7 +167,7 @@ a:focus, a:hover {
     font-weight: 200;
 }
 
-@media (min-width: 544px) {
+@media (min-width: 992px) {
     .appname {
         display: inline-block;
         font-size: 4.5rem;
