--- a/_includes/jumbotrons/injuredpixels-windows.html
+++ b/_includes/jumbotrons/injuredpixels-windows.html
@@ -6,7 +6,7 @@
         </a>
         <div class="jumbotron-content">
             <h1 class="jumbotron-heading"><a href="/injuredpixels/windows/" class="appname">InjuredPixels.</a> Check your PC, laptop or tablet screen for dead pixels, scratches or defects.</h1>
-            <p class="jumbotron-quote"><q>InjuredPixels is just about as simple a program as you'll see.</q> (BetaNews)</p>
+            <p class="jumbotron-quote"><q>The capable InjuredPixels is just about as simple a program as you'll see.</q> (BetaNews)</p>
             <p><a class="btn btn-primary" href="/injuredpixels/windows/download/" role="button">Get it Free for Windows</a></p>
             <p>Also available for <a class="link" href="/injuredpixels/android/">Android</a></p>
         </div>
