--- a/_includes/jumbotrons/whatsmyco-web.html
+++ b/_includes/jumbotrons/whatsmyco-web.html
@@ -6,7 +6,7 @@
         </a>
         <div class="jumbotron-content">
             <h1 class="jumbotron-heading"><a href="/whatsmyco/web/" class="appname">WhatsMyCo.</a>  Type your name or text and get your matching color! A fun way to discover colors!</h1>
-            <p class="jumbotron-quote"><q>WhatsMyCo is a pretty interesting concept.</q> (I Love Free Software)</p>
+            <p class="jumbotron-quote"><q>WhatsMyCo is a fun and pretty interesting concept.</q> (I Love Free Software)</p>
             <p><a class="btn btn-primary" href="/whatsmyco/web/download/" role="button">Run In Your Browser</a></p>
             <p></p>
         </div>
