--- a/_includes/css/section.css
+++ b/_includes/css/section.css
@@ -1,3 +1,34 @@
+
+/* ==========================================================================
+   Common
+   ========================================================================== */
+
+/*
+ * Featured Stripe
+ */
+
+ .featured-stripe {
+     background: #1badea;
+     padding: 3rem 0 1.75rem 0;
+     text-align: center;
+ }
+
+ .featured-heading {
+     color: #fff;
+     font-size: 1.25rem;
+     font-weight: bold;
+     margin-bottom: 1.25rem;
+ }
+
+.featured-logos a:focus, .featured-logos a:hover {
+    text-decoration: none;
+}
+
+.featured-logo {
+    margin: 0 2rem 1.25rem 2rem;
+}
+
+
 /* ==========================================================================
    App Pages
    ========================================================================== */
@@ -59,11 +90,9 @@
 }
 
 
-
-
-/*
- * Help pages
- */
+/* ==========================================================================
+   Help Pages
+   ========================================================================== */
 
 .help-section {
     margin-bottom: 3rem;
@@ -88,27 +117,10 @@
 }
 
 
-/*
- * Featured Stripe
- */
+/* ==========================================================================
+   Articles
+   ========================================================================== */
 
- .featured-stripe {
-     background: #1badea;
-     padding: 3rem 0 1.75rem 0;
-     text-align: center;
- }
-
- .featured-heading {
-     color: #fff;
-     font-size: 1.25rem;
-     font-weight: bold;
-     margin-bottom: 1.25rem;
- }
-
-.featured-logos a:focus, .featured-logos a:hover {
-    text-decoration: none;
-}
-
-.featured-logo {
-    margin: 0 2rem 1.25rem 2rem;
+.article {
+    margin-bottom: 3rem;
 }
