--- a/_layouts/article-page.html
+++ b/_layouts/article-page.html
@@ -8,6 +8,7 @@
 
 <!-- Main Content -->
 <article class="container site-main article">
+    <h1 class="page-heading">{{page.title}}</h1>
     {{ content }}
 </article>
 
