--- a/_includes/common/footer.html
+++ b/_includes/common/footer.html
@@ -3,29 +3,29 @@
     <footer class="site-footer">
         <div class="container">
             <nav class="nav nav-inline">
-                <a class="nav-link" href="/cinemadrape/windows/">CinemaDrape</a>
-                <a class="nav-link" href="/colorveil/windows/">ColorVeil</a>
-                <a class="nav-link" href="/injuredpixels/windows/">InjuredPixels</a>
-                <a class="nav-link" href="/pixelhealer/windows/">PixelHealer</a>
-                <a class="nav-link" href="/colortypist/windows/">Colortypist</a>
-                <a class="nav-link" href="/whatsmyco/web/">WhatsMyCo</a>
-                <a class="nav-link" href="/thumbico/windows/">Thumbico</a>
-                <a class="nav-link" href="/htmtied/windows/">HTMtied</a>
+                <a class="nav-link" href="{{site.baseurl}}/cinemadrape/windows/">CinemaDrape</a>
+                <a class="nav-link" href="{{site.baseurl}}/colorveil/windows/">ColorVeil</a>
+                <a class="nav-link" href="{{site.baseurl}}/injuredpixels/windows/">InjuredPixels</a>
+                <a class="nav-link" href="{{site.baseurl}}/pixelhealer/windows/">PixelHealer</a>
+                <a class="nav-link" href="{{site.baseurl}}/colortypist/windows/">Colortypist</a>
+                <a class="nav-link" href="{{site.baseurl}}/whatsmyco/web/">WhatsMyCo</a>
+                <a class="nav-link" href="{{site.baseurl}}/thumbico/windows/">Thumbico</a>
+                <a class="nav-link" href="{{site.baseurl}}/htmtied/windows/">HTMtied</a>
             </nav>
 
             <nav class="nav nav-inline">
-                <a class="nav-link" href="/apps/">Apps</a>
-                <a class="nav-link" href="/reviews/">Reviews</a>
-                <a class="nav-link" href="/support/">Support</a>
-                <a class="nav-link" href="/about/">About</a>
+                <a class="nav-link" href="{{site.baseurl}}/apps/">Apps</a>
+                <a class="nav-link" href="{{site.baseurl}}/reviews/">Reviews</a>
+                <a class="nav-link" href="{{site.baseurl}}/support/">Support</a>
+                <a class="nav-link" href="{{site.baseurl}}/about/">About</a>
             </nav>
 
-            <p class="copyright">Copyright © 1999-2016 Aurelitec. All rights reserved. <a href="/about/privacy/">Privacy Policy</a></p>
+            <p class="copyright">Copyright © 1999-2016 Aurelitec. All rights reserved. <a href="{{site.baseurl}}/about/privacy/">Privacy Policy</a></p>
 
             <nav class="nav nav-inline">
-                <a class="nav-link social social-twitter" href="https://twitter.com/aurelitec" target="_blank"><img class="social-icon" src="/img/third/social/twitter.svg" alt="Twitter" title="Twitter" /></a>
-                <a class="nav-link social social-github" href="https://github.com/aurelitec/" target="_blank"><img class="social-icon" src="/img/third/social/github.svg" alt="GitHub" title="GitHub" /></a>
-                <a class="nav-link social social-pocket" href="https://getpocket.com/@aurelitec" target="_blank"><img class="social-icon" src="/img/third/social/pocket.svg" alt="Pocket" title="Pocket" /></a>
+                <a class="nav-link social social-twitter" href="https://twitter.com/aurelitec" target="_blank"><img class="social-icon" src="{{site.baseurl}}/img/third/social/twitter.svg" alt="Twitter" title="Twitter" /></a>
+                <a class="nav-link social social-github" href="https://github.com/aurelitec/" target="_blank"><img class="social-icon" src="{{site.baseurl}}/img/third/social/github.svg" alt="GitHub" title="GitHub" /></a>
+                <a class="nav-link social social-pocket" href="https://getpocket.com/@aurelitec" target="_blank"><img class="social-icon" src="{{site.baseurl}}/img/third/social/pocket.svg" alt="Pocket" title="Pocket" /></a>
             </nav>
         </div>
     </footer> <!-- .site-footer -->
