--- a/_includes/common/header.html
+++ b/_includes/common/header.html
@@ -10,7 +10,7 @@
     <link href='https://fonts.googleapis.com/css?family=Monda:400,700' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Dosis:200" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="{{site.baseurl}}/css/main.css">
     <meta name="theme-color" content="#1BADEA">
 
     {% seo %}
@@ -25,8 +25,8 @@
     <header>
         <nav class="navbar">
             <div class="container">
-                <a class="navbar-brand" href="/">
-                    <img class="header-logo" alt="Aurelitec" src="/img/theme/branding/aurelitec-logo-header.png" />
+                <a class="navbar-brand" href="{{site.baseurl}}/">
+                    <img class="header-logo" alt="Aurelitec" src="{{site.baseurl}}/img/theme/branding/aurelitec-logo-header.png" />
                 </a>
 
                 <button class="navbar-toggler hidden-md-up pull-xs-right" type="button" data-toggle="collapse" data-target="#collapsingNavbar">&#9776;</button>
@@ -34,10 +34,10 @@
 
                 <div class="navbar-panel collapse navbar-toggleable-sm" id="collapsingNavbar">
                     <nav class="nav">
-                        <a class="nav-link" href="/apps/">Apps</a>
-                        <a class="nav-link" href="/reviews/">Reviews</a>
-                        <a class="nav-link" href="/support/">Support</a>
-                        <a class="nav-link" href="/about/">About</a>
+                        <a class="nav-link" href="{{site.baseurl}}/apps/">Apps</a>
+                        <a class="nav-link" href="{{site.baseurl}}/reviews/">Reviews</a>
+                        <a class="nav-link" href="{{site.baseurl}}/support/">Support</a>
+                        <a class="nav-link" href="{{site.baseurl}}/about/">About</a>
                     </nav>
                 </div>
             </div>
