--- a/_includes/jumbotrons/pixelhealer-windows.html
+++ b/_includes/jumbotrons/pixelhealer-windows.html
@@ -1,13 +1,13 @@
 <!-- PixelHealer for Windows Jumbotron -->
 <div class="jumbotron jumbotron-fluid">
     <div class="container">
-        <a href="/pixelhealer/windows/">
-            <img class="img-fluid jumbotron-shot" src="/img/apps/pixelhealer/pixelhealer-jumbotron-shot.jpg" alt="PixelHealer Screenshot" />
+        <a href="{{site.baseurl}}/pixelhealer/windows/">
+            <img class="img-fluid jumbotron-shot" src="{{site.baseurl}}/img/apps/pixelhealer/pixelhealer-jumbotron-shot.jpg" alt="PixelHealer Screenshot" />
         </a>
         <div class="jumbotron-content">
-            <h1 class="jumbotron-heading"><a href="/pixelhealer/windows/" class="appname">PixelHealer.</a> Try to fix dead, stuck or hot pixels by yourself, before running back to the store!</h1>
+            <h1 class="jumbotron-heading"><a href="{{site.baseurl}}/pixelhealer/windows/" class="appname">PixelHealer.</a> Try to fix dead, stuck or hot pixels by yourself, before running back to the store!</h1>
             <p class="jumbotron-quote"><q>An effective and money-saving solution for dead or stuck pixels on your screen.</q> (Download3K)</p>
-            <p><a class="btn btn-primary" href="/pixelhealer/windows/download/" role="button">Get it Free for Windows</a></p>
+            <p><a class="btn btn-primary" href="{{site.baseurl}}/pixelhealer/windows/download/" role="button">Get it Free for Windows</a></p>
             <p></p>
         </div>
     </div>
