--- a/_includes/stripes/featured/home.html
+++ b/_includes/stripes/featured/home.html
@@ -1,19 +1,19 @@
 <!-- CinemaDrape for Windows Featured Logos -->
 {% capture thecontent %}
     <a href="http://lifehacker.com/5465228/cinemadrape-creates-a-distraction-free-zone-for-any-application" target="_blank">
-        <img class="featured-logo" height="40" src="/img/third/reviews/l/lifehacker/lifehacker-white.png" alt="Lifehacker" />
+        <img class="featured-logo" height="40" src="{{site.baseurl}}/img/third/reviews/l/lifehacker/lifehacker-white.png" alt="Lifehacker" />
     </a>
     <a href="http://revision3.com/tzdaily/2010-07-01cinedrape" target="_blank">
-        <img class="featured-logo" height="40" src="/img/third/reviews/r/revision3/revision3-white.svg" alt="Revision3" />
+        <img class="featured-logo" height="40" src="{{site.baseurl}}/img/third/reviews/r/revision3/revision3-white.svg" alt="Revision3" />
     </a>
     <a href="https://gb.zinio.com/www/browse/issue.jsp?skuId=416124197#/" target="_blank">
-        <img class="featured-logo" height="30" src="/img/third/reviews/w/webuser/webuser-white.png" alt="Web User" />
+        <img class="featured-logo" height="30" src="{{site.baseurl}}/img/third/reviews/w/webuser/webuser-white.png" alt="Web User" />
     </a>
     <a href="http://www.digi24.ro/Stiri/Digi24/Sci-tech/Tehnologie/Aplicatie+pentru+dislexici" target="_blank">
-        <img class="featured-logo" height="50" src="/img/third/reviews/d/digi24/digi24-white.png" alt="Digi24" />
+        <img class="featured-logo" height="50" src="{{site.baseurl}}/img/third/reviews/d/digi24/digi24-white.png" alt="Digi24" />
     </a>
     <a href="http://www.pcadvisor.co.uk/download/system-desktop-tools/colorveil-200101-3330561/" target="_blank">
-        <img class="featured-logo" height="30" src="/img/third/reviews/p/pcadvisor/pcadvisor-white.png" alt="PC Advisor" />
+        <img class="featured-logo" height="30" src="{{site.baseurl}}/img/third/reviews/p/pcadvisor/pcadvisor-white.png" alt="PC Advisor" />
     </a>
 {% endcapture %}
 {% include templates/featured-stripe.html %}
