--- a/_layouts/article-page.html
+++ b/_layouts/article-page.html
@@ -2,7 +2,7 @@
 
 <div class="jumbotron jumbotron-fluid">
     <div class="container">
-        <p class="jumbotron-heading"><a class="appname" href="/articles/">Articles</a></p>
+        <p class="jumbotron-heading"><a class="appname" href="{{site.baseurl}}/articles/">Articles</a></p>
     </div>
 </div>
 
