--- a/_includes/jumbotrons/thumbico-windows.html
+++ b/_includes/jumbotrons/thumbico-windows.html
@@ -1,13 +1,13 @@
 <!-- Thumbico for Windows Jumbotron -->
 <div class="jumbotron jumbotron-fluid">
     <div class="container">
-        <a href="/thumbico/windows/">
-            <img class="img-fluid jumbotron-shot" src="/img/apps/thumbico/thumbico-jumbotron-shot.png" alt="Thumbico Screenshot" />
+        <a href="{{site.baseurl}}/thumbico/windows/">
+            <img class="img-fluid jumbotron-shot" src="{{site.baseurl}}/img/apps/thumbico/thumbico-jumbotron-shot.png" alt="Thumbico Screenshot" />
         </a>
         <div class="jumbotron-content">
-            <h1 class="jumbotron-heading"><a href="/thumbico/windows/" class="appname">Thumbico.</a> View the large thumbnail or icon of any file, document, or program on your PC.</h1>
+            <h1 class="jumbotron-heading"><a href="{{site.baseurl}}/thumbico/windows/" class="appname">Thumbico.</a> View the large thumbnail or icon of any file, document, or program on your PC.</h1>
             <p class="jumbotron-quote"><q>Comprehensive and ingenious despite a more spartan interface.</q> (Allmyapps)</p>
-            <p><a class="btn btn-primary" href="/thumbico/windows/download/" role="button">Get it Free for Windows</a></p>
+            <p><a class="btn btn-primary" href="{{site.baseurl}}/thumbico/windows/download/" role="button">Get it Free for Windows</a></p>
             <p></p>
         </div>
     </div>
