--- a/_includes/common/header.html
+++ b/_includes/common/header.html
@@ -25,8 +25,8 @@
     <header>
         <nav class="navbar">
             <div class="container">
-                <a class="navbar-brand" href="{{site.baseurl}}/">
-                    <img class="header-logo" alt="Aurelitec" src="{{site.baseurl}}/img/theme/branding/aurelitec-logo-header.png" />
+                <a class="navbar-brand" href="{{ site.github.url }}/">
+                    <img class="header-logo" alt="Aurelitec" src="{{ site.github.url }}/img/theme/branding/aurelitec-logo-header.png" />
                 </a>
 
                 <button class="navbar-toggler hidden-md-up pull-xs-right" type="button" data-toggle="collapse" data-target="#collapsingNavbar">&#9776;</button>
@@ -34,7 +34,7 @@
 
                 <div class="navbar-panel collapse navbar-toggleable-sm" id="collapsingNavbar">
                     <nav class="nav">
-                        <a class="nav-link" href="{{site.baseurl}}/apps/">Apps</a>
+                        <a class="nav-link" href="{{site.baseurl}}/apps/">TApps</a>
                         <a class="nav-link" href="{{site.baseurl}}/reviews/">Reviews</a>
                         <a class="nav-link" href="{{site.baseurl}}/support/">Support</a>
                         <a class="nav-link" href="{{site.baseurl}}/about/">About</a>
